# rapid-ecom

./: pyproject.toml
product_testing/: main.py
product_testing/backend/: generate_pixel.py  write_dns.py
product_testing/copygen/: fill_copy.py  fill_offer.py  fill_pixel.py  gpt_completions.py
product_testing/helpers/: cycle_keys.py  setup_directory.py
product_testing/post_shopify/: create_pages.py  post_shopify.py
templates/: llm-prompts.json
templates/pages/: Contact Us.html  Order Tracking.html  Privacy Policy.html  Refunds & Returns.html  Terms & Conditions.html
templates/theme/assets/: doubly.js  theme.css
templates/theme/config/: settings_data.json
templates/theme/layout/: theme.liquid
templates/theme/locales/: en.default.json
templates/theme/snippets/: product-template.liquid
templates/theme/templates/: page.contact.json  product.json
tests/working_directory/: 0000-copywriting.json  product_description.txt
tests/working_directory/pages/: Shipping & Handling.html  Support & FAQ.html
tests/working_directory/theme/assets/: country-flags.css
tests/working_directory/theme/config/: settings_data.json
tests/working_directory/theme/layout/: theme.liquid
tests/working_directory/theme/locales/: ja.json
tests/working_directory/theme/templates/: index.json  product.json
